--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="./public/img/rickYmorty.icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rick Y Morty</title>
+    <title>Rick and Morty</title>
   </head>
   <body>
     <div id="root"></div>
